# plugin.audio.somafm

./: .pre-commit-config.yaml  LICENSE.txt  README.md  addon.xml  changelog.txt  compose.yml  default.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
resources/lib/: addon.py
